# substrait-to-sql

./: .gitignore  .pre-commit-config.yaml  .pydocstyle  README.md  proto-regenerate.py  pyproject.toml
substrait_to_sql/: __init__.py
substrait_to_sql/substrait/: capabilities_pb2.py  expression_pb2.py  function_pb2.py  parameterized_types_pb2.py  plan_pb2.py  relations_pb2.py  type_expressions_pb2.py  type_pb2.py
substrait_to_sql/substrait/extensions/: extensions_pb2.py
tests/: test_substrait_to_sql.py
