[tool.poetry]
name = "substrait-to-sql"
version = "0.1.0"
description = ""
authors = ["Jeroen van Straten <jeroen.van.straten@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
protobuf = "^3.19.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
protobuf-gen = "^0.0.4"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
